--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "Ticket availabilty scraper for jrt.lv",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node --env-file=.env app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ."
   },
   "author": "Janis Kikans",
   "license": "ISC",
   "dependencies": {
+    "discord.js": "^14.15.2",
     "linkedom": "^0.18.2"
   }
 }
